# multi_agent_workflow

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt
docs/: demo.md  evaluation.md
multi-agent-research-report/: README.md  main.py  pyproject.toml
multi-agent-research-report/src/multi_agent_report/: __init__.py  agents.py  config.py
src/multi_agent_report/: utils.py  workflow.py
tests/: test_utils.py
